# market-data-dashboard

./: CMakeLists.txt  LICENSE  docker-compose.yml  run.sh
include/: DashboardWindow.h  DatabaseWriter.h  KafkaConsumer.h
init/: schema.sql
src/: DashboardWindow.cpp  DatabaseWriter.cpp  KafkaConsumer.cpp  main.cpp
